--- a/index.html
+++ b/index.html
@@ -23,27 +23,29 @@
 
 <!-- Slim Info Banner -->
 <div class="info-banner">
-    Erhalte ein glattes Hautbild
+    Natürlich strahlende Haut & Lippen
 </div>
 
 <!-- Hero -->
 <header class="hero">
     <div class="hero-card">
-        <span class="hero-eyebrow">Kostenlose Erstberatung</span>
+        <span class="hero-eyebrow">BB Glow Wien 1060 | Gesicht & Lippen | Kosmetikstudio im 6. Bezirk</span>
 
         <h1>
-            <span class="hero-highlight">Müde vom Rasieren?</span><br>
-            IMMER glatte haut<br>
+            <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br>
+            Mit professionellem BB Glow im 6. Bezirk in Wien verleihen wir deinem Gesicht und deinen Lippen einen ebenmäßigen, frischen Look.<br>
+            Sanft, effektiv und individuell <br>
             Für nur 99€ <span class="old-price">statt 160€</span>
         </h1>
 
         <p class="hero-sub hero-sub-secondary">
-            Für immer glatte Haut – ohne Rasieren, ohne Schmerzen!
+            BB Glow Wien 1060 – Natürlicher Glow für Gesicht & Lippen <br>
+Dein Kosmetikstudio im 6. Bezirk, zentral gelegen
         </p>
 
         <p class="hero-sub">
-            Stoppel, Rasierpickel & nerviges Waxing? <br>
-            Sag ihnen heute für immer Goodbye!
+            BB Glow Behandlung in Wien 1060 <br>
+             Natürlich strahlende Haut & Lippen 
         </p>
 
         <video
@@ -64,8 +66,9 @@
 </header>
 
 <section class="color-banner">
-    <h2>Natürlich glatte Haut – ganz ohne Rasieren, ohne Schmerzen!!</h2>
-    <p>Mit unserer Expertise und dem modernsten Gerät bekommst du sofort sichtbare Ergebnisse.</p>
+    <h2>Was ist BB Glow?</h2>
+    <p>BB Glow ist eine moderne kosmetische Behandlung, bei der hochwertige BB-Seren mittels Microneedling sanft in die Haut eingearbeitet werden.
+Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
     <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21
     " 
        class="btn btn-primary" target="_blank">
@@ -77,15 +80,16 @@
     <div class="split-text">
         <h3>Modernste Technologie für deine Haut</h3>
         <p>Unseres Gerät arbeitet nehezu schmerzfrei.</p>
-        <p>Unsere Expertise sichert dir deuerhaft glatte Haut!</p>
+        <p>Unsere Expertise sichert dir deuerhaft strahlende Haut!</p>
     </div>
     <img src="header - bild 1.avif" alt="Behandlung" class="split-image">
 </section>
 
 <section class="split">
     <div class="split-text">
-        <h3>Erhalte ein sichtbaar glattes Hautbild!</h3>
-        <p>Stoppel, Rasierpickel & nerviges Waxing? Sag ihnen heute für immer Goodbye!.</p>
+        <h3>BB Glow für die Lippen verleiht blassen oder ungleichmäßigen Lippen eine zarte, natürliche Tönung.</h3>
+        <p>Die Lippen wirken frischer, voller und gleichmäßiger – ganz ohne Lippenstift oder Permanent Make-up.<p>
+Ideal für Kund aus Wien, die sich dauerhaft schöne Lippen mit einem natürlichen Finish wünschen.</p>
     </div>
     <img src="bild2.avif" alt="Behandlung" class="split-image">
 </section>
@@ -93,16 +97,16 @@
 <section class="benefits">
     <div class="benefit-grid">
         <div class="benefit">
-            <h4> Haarfrei</h4>
-            <p>Sichtbar glatteres Hautbild</p>
+            <h4> Naschmarkt Nähe</h4>
+            <p>Professionelle BB Glow Behandlung in zentraler Lage</p>
         </div>
         <div class="benefit">
-            <h4>Modernstes Gerät</h4>
-            <p>Sofort sichtbare Ergebnisse</p>
+            <h4>Professionalität</h4>
+            <p>Individuelle Beratung & Hautanalyse</p>
         </div>
         <div class="benefit">
             <h4>Sanft & sicher</h4>
-            <p>Angenehme, moderne Behandlung</p>
+            <p>Keine Ausfallzeit</p>
         </div>
     </div>
     
@@ -136,7 +140,7 @@
             </p>
             <div class="testimonial-author">
                 ⭐⭐⭐⭐⭐<br>
-                <strong>Maria K.</strong>
+                <strong>Marlene</strong>
             </div>
         </div>
 
@@ -147,7 +151,7 @@
             </p>
             <div class="testimonial-author">
                 ⭐⭐⭐⭐⭐<br>
-                <strong>Sabine L.</strong>
+                <strong>Anna-Maria.</strong>
             </div>
         </div>
 
@@ -158,7 +162,7 @@
             </p>
             <div class="testimonial-author">
                 ⭐⭐⭐⭐⭐<br>
-                <strong>Claudia M.</strong>
+                <strong>Edith W.</strong>
             </div>
         </div>
     </div>
@@ -210,3 +214,4 @@
 
 </body>
 </html>
+
