Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
         <p>Unseres Gerät arbeitet nehezu schmerzfrei.</p>
         <p>Unsere Expertise sichert dir deuerhaft strahlende Haut!</p>
     </div>
-    <img src="header - bild 1.avif" alt="Behandlung" class="split-image">
+    <img src="header - Bild1.png" alt="Behandlung" class="split-image">
 </section>
 
 <section class="split">
@@ -91,7 +91,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
         <p>Die Lippen wirken frischer, voller und gleichmäßiger – ganz ohne Lippenstift oder Permanent Make-up.<p>
 Ideal für Kund aus Wien, die sich dauerhaft schöne Lippen mit einem natürlichen Finish wünschen.</p>
     </div>
-    <img src="bild2.avif" alt="Behandlung" class="split-image">
+    <img src="Bild2.png" alt="Behandlung" class="split-image">
 </section>
 
 <section class="benefits">
@@ -214,4 +214,5 @@ Ideal für Kund aus Wien, die sich dauerhaft schöne Lippen mit einem natürlich
 
 </body>
 </html>
+
 
