Revise text and improve clarity in index.html
Updated content and fixed minor typos in index.html.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <h1>
             <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br>
-            Mit professionellem BB Glow im 6. Bezirk in Wien verleihen wir deinem Gesicht und deinen Lippen einen ebenmäßigen, frischen Look.<br>
+            Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.<br>
             Sanft, effektiv und individuell <br>
             Für nur 99€ <span class="old-price">statt 160€</span>
         </h1>
@@ -44,7 +44,7 @@ Dein Kosmetikstudio im 6. Bezirk, zentral gelegen
         </p>
 
         <p class="hero-sub">
-            BB Glow Behandlung in Wien 1060 <br>
+            BB Glow Behandlung <br>
              Natürlich strahlende Haut & Lippen 
         </p>
 
@@ -89,7 +89,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
     <div class="split-text">
         <h3>BB Glow für die Lippen verleiht blassen oder ungleichmäßigen Lippen eine zarte, natürliche Tönung.</h3>
         <p>Die Lippen wirken frischer, voller und gleichmäßiger – ganz ohne Lippenstift oder Permanent Make-up.<p>
-Ideal für Kund aus Wien, die sich dauerhaft schöne Lippen mit einem natürlichen Finish wünschen.</p>
+Ideal für Kundinnen aus Wien und Umgebung, die sich dauerhaft schöne Lippen mit einem natürlichen Finish wünschen.</p>
     </div>
     <img src="Bild2.png" alt="Behandlung" class="split-image">
 </section>
@@ -129,7 +129,7 @@ Ideal für Kund aus Wien, die sich dauerhaft schöne Lippen mit einem natürlich
 <section class="testimonials">
     <h2>Das sagen unsere Kundinnen</h2>
     <p class="testimonials-sub">
-        Echte Erfahrungen nach der HIFU Behandlung
+        Echte Erfahrungen mit dem BB Glow bei Secret Beauty Body Art
     </p>
 
     <div class="testimonial-grid">
@@ -214,5 +214,6 @@ Ideal für Kund aus Wien, die sich dauerhaft schöne Lippen mit einem natürlich
 
 </body>
 </html>
+
 
 
