Fix HTML formatting and structure issues

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -21,12 +20,10 @@
     </div>
 </div>
 
-<!-- Slim Info Banner -->
 <div class="info-banner">
     Natürlich strahlende Haut & Lippen
 </div>
 
-<!-- Hero -->
 <header class="hero">
     <div class="hero-card">
         <span class="hero-eyebrow">BB Glow Wien 1060 | Gesicht & Lippen | Kosmetikstudio im 6. Bezirk</span>
@@ -34,18 +31,20 @@
         <h1>
             <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br>
             Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.<br>
-            Sanft, effektiv und individuell <br>
-            Für nur 99€ <span class="old-price">statt 160€</span>
+            <span class="hero-highlight">Sanft, effektiv und individuell</span><br><br>
+            <span class="hero-price">
+                Für nur 99€ <span class="old-price">statt 160€</span>
+            </span>
         </h1>
 
         <p class="hero-sub hero-sub-secondary">
             BB Glow Wien 1060 – Natürlicher Glow für Gesicht & Lippen <br>
-Dein Kosmetikstudio im 6. Bezirk, zentral gelegen
+            Dein Kosmetikstudio im 6. Bezirk, zentral gelegen
         </p>
 
         <p class="hero-sub">
             BB Glow Behandlung <br>
-             Natürlich strahlende Haut & Lippen 
+            Natürlich strahlende Haut & Lippen 
         </p>
 
         <video
@@ -69,8 +68,7 @@ Dein Kosmetikstudio im 6. Bezirk, zentral gelegen
     <h2>Was ist BB Glow?</h2>
     <p>BB Glow ist eine moderne kosmetische Behandlung, bei der hochwertige BB-Seren mittels Microneedling sanft in die Haut eingearbeitet werden.
 Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
-    <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21
-    " 
+    <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
        class="btn btn-primary" target="_blank">
        Jetzt Termin buchen!
     </a>
@@ -88,8 +86,8 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 <section class="split">
     <div class="split-text">
         <h3>BB Glow für die Lippen verleiht blassen oder ungleichmäßigen Lippen eine zarte, natürliche Tönung.</h3>
-        <p>Die Lippen wirken frischer, voller und gleichmäßiger – ganz ohne Lippenstift oder Permanent Make-up.<p>
-Ideal für Kundinnen aus Wien und Umgebung, die sich dauerhaft schöne Lippen mit einem natürlichen Finish wünschen.</p>
+        <p>Die Lippen wirken frischer, voller und gleichmäßiger – ganz ohne Lippenstift oder Permanent Make-up.</p>
+        <p>Ideal für Kundinnen aus Wien und Umgebung, die sich dauerhaft schöne Lippen mit einem natürlichen Finish wünschen.</p>
     </div>
     <img src="Bild2.png" alt="Behandlung" class="split-image">
 </section>
@@ -117,15 +115,13 @@ Ideal für Kundinnen aus Wien und Umgebung, die sich dauerhaft schöne Lippen mi
     </div>
 
     <div class="benefits-btn">
-        <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21
-        " 
+        <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
            class="btn btn-primary" target="_blank">
             Jetzt Termin buchen!
         </a>
     </div>
 </section>
 
-<!-- Kundenkommentare -->
 <section class="testimonials">
     <h2>Das sagen unsere Kundinnen</h2>
     <p class="testimonials-sub">
@@ -168,8 +164,7 @@ Ideal für Kundinnen aus Wien und Umgebung, die sich dauerhaft schöne Lippen mi
     </div>
 
     <div class="testimonials-btn">
-        <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21
-        " 
+        <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
         class="btn btn-primary" target="_blank">
             Jetzt Beratung buchen!
         </a>
@@ -193,8 +188,7 @@ Ideal für Kundinnen aus Wien und Umgebung, die sich dauerhaft schöne Lippen mi
 <section class="final-cta" id="kontakt">
     <h2>Nur noch 4 Plätze frei!!</h2>
     <h2>Buche Deinen Termin noch heute!</h2>
-    <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21
-    " 
+    <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
     class="btn btn-primary" target="_blank">
         Jetzt per WhatsApp schreiben
     </a>
@@ -214,6 +208,3 @@ Ideal für Kundinnen aus Wien und Umgebung, die sich dauerhaft schöne Lippen mi
 
 </body>
 </html>
-
-
-
