--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <span class="hero-eyebrow">BB Glow Wien 1060 | Gesicht & Lippen | Kosmetikstudio im 6. Bezirk</span>
 
         <h1>
-            <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br>
-            Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.<br>
+            <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br> <br>
+            Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.<br> <br>
             <span class="hero-highlight">Sanft, effektiv und individuell</span><br><br>
             <span class="hero-price">
                 Für nur 99€ <span class="old-price">statt 160€</span>
@@ -208,3 +208,4 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
 </body>
 </html>
+
