--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <h1>
             <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br> <br>
-            Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.<br> <br>
+            Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.</span><br> <br>
             <span class="hero-highlight">Sanft, effektiv und individuell</span><br><br>
             <span class="hero-price">
                 Für nur 99€ <span class="old-price">statt 160€</span>
@@ -208,4 +208,5 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
 </body>
 </html>
+
 
