--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
         <p>Unseres Gerät arbeitet nehezu schmerzfrei.</p>
         <p>Unsere Expertise sichert dir deuerhaft strahlende Haut!</p>
     </div>
-    <img src="header - Bild1.png" alt="Behandlung" class="split-image">
+    <img src="Bild1.png" alt="Behandlung" class="split-image">
 </section>
 
 <section class="split">
@@ -208,5 +208,6 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
 </body>
 </html>
+
 
 
