--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <span class="hero-eyebrow">BB Glow Wien 1060 | Gesicht & Lippen | Kosmetikstudio im 6. Bezirk</span>
 
         <h1>
-            <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br> <br>
-            Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.</span><br> <br>
+            <span class="hero-highlight">Strahlende Haut – ganz ohne Make-up.</span><br><br>
+            Mit professionellem BB Glow verleihen wir Dir einen ebenmäßigen, frischen Look.<br><br>
             <span class="hero-highlight">Sanft, effektiv und individuell</span><br><br>
             <span class="hero-price">
                 Für nur 99€ <span class="old-price">statt 160€</span>
@@ -66,8 +66,10 @@
 
 <section class="color-banner">
     <h2>Was ist BB Glow?</h2>
-    <p>BB Glow ist eine moderne kosmetische Behandlung, bei der hochwertige BB-Seren mittels Microneedling sanft in die Haut eingearbeitet werden.
-Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
+    <p>
+        BB Glow ist eine moderne kosmetische Behandlung, bei der hochwertige BB-Seren mittels Microneedling sanft in die Haut eingearbeitet werden.
+        Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.
+    </p>
     <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
        class="btn btn-primary" target="_blank">
        Jetzt Termin buchen!
@@ -95,7 +97,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 <section class="benefits">
     <div class="benefit-grid">
         <div class="benefit">
-            <h4> Naschmarkt Nähe</h4>
+            <h4>Naschmarkt Nähe</h4>
             <p>Professionelle BB Glow Behandlung in zentraler Lage</p>
         </div>
         <div class="benefit">
@@ -107,7 +109,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
             <p>Keine Ausfallzeit</p>
         </div>
     </div>
-    
+
     <div class="benefits-images">
         <img src="VN1.avif" alt="Ergebnis 1" class="benefit-img">
         <img src="VN2.avif" alt="Ergebnis 2" class="benefit-img">
@@ -165,7 +167,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
     <div class="testimonials-btn">
         <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
-        class="btn btn-primary" target="_blank">
+           class="btn btn-primary" target="_blank">
             Jetzt Beratung buchen!
         </a>
     </div>
@@ -189,7 +191,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
     <h2>Nur noch 4 Plätze frei!!</h2>
     <h2>Buche Deinen Termin noch heute!</h2>
     <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
-    class="btn btn-primary" target="_blank">
+       class="btn btn-primary" target="_blank">
         Jetzt per WhatsApp schreiben
     </a>
     <p>Du wirst direkt zu WhatsApp weitergeleitet</p>
@@ -208,6 +210,3 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
 </body>
 </html>
-
-
-
