--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
 
 <section class="color-banner">
     <h2>Was ist BB Glow?</h2>
-    <p>
-        BB Glow ist eine moderne kosmetische Behandlung, bei der hochwertige BB-Seren mittels Microneedling sanft in die Haut eingearbeitet werden.
-        Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.
-    </p>
+    <p>BB Glow ist eine moderne kosmetische Behandlung, bei der hochwertige BB-Seren mittels Microneedling sanft in die Haut eingearbeitet werden.
+Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
     <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
        class="btn btn-primary" target="_blank">
        Jetzt Termin buchen!
@@ -82,7 +80,7 @@
         <p>Unseres Gerät arbeitet nehezu schmerzfrei.</p>
         <p>Unsere Expertise sichert dir deuerhaft strahlende Haut!</p>
     </div>
-    <img src="Bild1.png" alt="Behandlung" class="split-image">
+    <img src="header - Bild1.png" alt="Behandlung" class="split-image">
 </section>
 
 <section class="split">
@@ -97,7 +95,7 @@
 <section class="benefits">
     <div class="benefit-grid">
         <div class="benefit">
-            <h4>Naschmarkt Nähe</h4>
+            <h4> Naschmarkt Nähe</h4>
             <p>Professionelle BB Glow Behandlung in zentraler Lage</p>
         </div>
         <div class="benefit">
@@ -109,7 +107,7 @@
             <p>Keine Ausfallzeit</p>
         </div>
     </div>
-
+    
     <div class="benefits-images">
         <img src="VN1.avif" alt="Ergebnis 1" class="benefit-img">
         <img src="VN2.avif" alt="Ergebnis 2" class="benefit-img">
@@ -167,7 +165,7 @@
 
     <div class="testimonials-btn">
         <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
-           class="btn btn-primary" target="_blank">
+        class="btn btn-primary" target="_blank">
             Jetzt Beratung buchen!
         </a>
     </div>
@@ -191,7 +189,7 @@
     <h2>Nur noch 4 Plätze frei!!</h2>
     <h2>Buche Deinen Termin noch heute!</h2>
     <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
-       class="btn btn-primary" target="_blank">
+    class="btn btn-primary" target="_blank">
         Jetzt per WhatsApp schreiben
     </a>
     <p>Du wirst direkt zu WhatsApp weitergeleitet</p>
