--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             Dein Browser unterstützt dieses Video nicht.
         </video>
 
-        <a href="#kontakt" class="btn btn-primary">
+        <!-- Minimal notwendige Änderung: z-index im HTML -->
+        <a href="#kontakt" class="btn btn-primary" style="position: relative; z-index: 10;">
             Jetzt 61€ sparen!
         </a>
     </div>
@@ -80,7 +81,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
         <p>Unseres Gerät arbeitet nehezu schmerzfrei.</p>
         <p>Unsere Expertise sichert dir deuerhaft strahlende Haut!</p>
     </div>
-    <img src="header - Bild1.png" alt="Behandlung" class="split-image">
+    <img src="Bild1.png" alt="Behandlung" class="split-image">
 </section>
 
 <section class="split">
@@ -154,7 +155,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
         <div class="testimonial-card">
             <p class="testimonial-text">
                 „Meine Haut ist schon nach wenigen Terminen glatter.
-                Das Studio ist wunderschön und sehr hygienisch.“
+                Das Studio ist wunderschön und sehr hygienisch.“ 
             </p>
             <div class="testimonial-author">
                 ⭐⭐⭐⭐⭐<br>
@@ -189,7 +190,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
     <h2>Nur noch 4 Plätze frei!!</h2>
     <h2>Buche Deinen Termin noch heute!</h2>
     <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
-    class="btn btn-primary" target="_blank">
+    class="btn btn-primary" target="_blank" style="position: relative; z-index: 10;">
         Jetzt per WhatsApp schreiben
     </a>
     <p>Du wirst direkt zu WhatsApp weitergeleitet</p>
