--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             Dein Browser unterstützt dieses Video nicht.
         </video>
 
-        <!-- Minimal notwendige Änderung: z-index im HTML -->
-        <a href="#kontakt" class="btn btn-primary" style="position: relative; z-index: 10;">
+        <a href="https://wa.me/436766801228?text=Hallo%20liebes%20SECRET%20Beauty%20Body%20Art%20Team%21%0A%0AIch%20würde%20gerne%20einen%20der%20limitierten%20Plätze%20für%20die%20Haarentfernung%20im%20Wert%20von%20nur%2099%E2%82%AC%20buchen.%0A%0ALiebe%20Grüße%21"
+       class="btn btn-primary" target="_blank">
             Jetzt 61€ sparen!
         </a>
     </div>
@@ -209,3 +209,4 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
 </body>
 </html>
+
