Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
     <div class="testimonial-grid">
         <div class="testimonial-card">
             <p class="testimonial-text">
-                „Schon nach der ersten Behandlung war meine Haut deutlich glatter.
+                „In den ersten Minuten nach der behandlung habe ich schon das tolle Ergebnis gesehen.
                 Ich habe mich sehr gut aufgehoben gefühlt – absolute Empfehlung!“
             </p>
             <div class="testimonial-author">
@@ -144,7 +144,7 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
         <div class="testimonial-card">
             <p class="testimonial-text">
                 „Schmerzarm, professionell und das Ergebnis ist wirklich sichtbar.
-                Ich komme definitiv wieder!“
+                Ab sofort brauche ich kein Make-Up!“
             </p>
             <div class="testimonial-author">
                 ⭐⭐⭐⭐⭐<br>
@@ -154,8 +154,8 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
         <div class="testimonial-card">
             <p class="testimonial-text">
-                „Meine Haut ist schon nach wenigen Terminen glatter.
-                Das Studio ist wunderschön und sehr hygienisch.“ 
+                „Ich war so skeptisch, aber das Ergebnis hat mich absolut erstaunt und überzeugt.
+                Hochprofessionell und sehr hygienisch.“ 
             </p>
             <div class="testimonial-author">
                 ⭐⭐⭐⭐⭐<br>
@@ -209,4 +209,5 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
 </body>
 </html>
+
 
