Change title and content in index.html
Updated the title and some text content in index.html.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Kostenlose Beratung</title>
+    <title>Kostenlose Erstberatung</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -209,5 +209,6 @@ Die Haut wirkt sofort frischer, gleichmäßiger und strahlender.</p>
 
 </body>
 </html>
+
 
 
